--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,35 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+/* Styles for the menu bar */
+nav {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    width: 200px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    margin: 10px 0;
+}
+
+/* Styles for the "About Us" and "Dashboard" links */
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
